# FaceDetection

./: .gitignore  README.md  SPEC.md  config.defaults.toml  pyproject.toml
scripts/: download_models.py
src/facedetect/: __main__.py  app.py  config.py
src/facedetect/capture/: webcam.py
src/facedetect/pipeline/: detector.py  liveness.py  quality.py  types.py
src/facedetect/services/: enrollment.py  events.py  recognition.py
src/facedetect/storage/: repo.py  schema.sql
src/facedetect/ui/: control_panel.py  enrollment_wizard.py  events_viewer.py  live_view.py  people_manager.py
src/facedetect/util/: image_ops.py  logging.py  metrics.py  tracker.py
tests/: conftest.py  test_quality.py  test_repo.py  test_tracker.py
